# secret-santa

./: Dockerfile  README.md  pyproject.toml
secret_santa/: app.py  main.py  santa.py
